--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ img {
   <center><p>suggest scratch geometry dash games <a href="https://github.com/Marc92020/geometry-dash-scratch-directory/issues">here</a></p></center>
 <img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo.png" alt="logo">
 	<center><p>due to robtop taking gd scratch games down, most versions linked here are now hosted on this site.</p></center>
-	<h1 id="title"><center>normal games</center></h1>
+<h1 id="title"><center>normal games</center></h1>
 	<a href="/geometry-dash-scratch-directory/GeometryDash.html"><center>Geometry Dash</center></a>
 <br>
 	<a href="/geometry-dash-scratch-directory/backups/meltdown.html"><center>Geometry Dash Meltdown</center></a>
@@ -47,32 +47,33 @@ img {
 	<a href="/geometry-dash-scratch-directory/backups/world-dashlands.html"><center>Geometry Dash World Dashlands</center></a>
 <br>
 	<a href="/geometry-dash-scratch-directory/backups/world-tf.html"><center>Geometry Dash World Toxic Factory</center></a>
-	<h1 id="title"><center>hacked versions</center></h1>
-  <a href="https://scratch.mit.edu/projects/349655586/"><center>Geometry Dash Hacked</center></a>
-  <br>
-  <a href="https://scratch.mit.edu/projects/404062989"><center>Geometry Dash Meltdown Hacked</center></a>
-  <br>
-  <a href="https://scratch.mit.edu/projects/329227608/"><center>Geometry Dash Subzero Hacked</center></a>
-  <br>
-  <a href="https://scratch.mit.edu/projects/405324048"><center>Geometry Dash World Toxic Factory Hacked</center></a>
-	<h1 id="title"><center>geometry dash levels 4-21</center></h1>
+<h1 id="title"><center>hacked versions</center></h1>
+  	<a href="https://scratch.mit.edu/projects/512209271/"><center>Geometry Dash Hacked</center></a>
+<br>
+  	<a href="https://scratch.mit.edu/projects/404062989"><center>Geometry Dash Meltdown Hacked</center></a>
+<br>
+  	<a href="https://scratch.mit.edu/projects/329227608/"><center>Geometry Dash Subzero Hacked</center></a>
+<br>
+	<a href="https://scratch.mit.edu/projects/380567742/"><center>Geometry Dash World Dashlands Hacked</center></a>
+<br>
+  	<a href="https://scratch.mit.edu/projects/405324048"><center>Geometry Dash World Toxic Factory Hacked</center></a>
+<h1 id="title"><center>geometry dash levels 4-21</center></h1>
 	<a href="https://scratch.mit.edu/projects/118638917/"><center>Geometry Dash Levels 4-6</center></a>
   <br>
 	<a href="https://scratch.mit.edu/projects/120721851"><center>Geometry Dash Levels 7-8</center></a>
-    <br>
+<br>
 	<a href="https://scratch.mit.edu/projects/140185501/"><center>Geometry Dash Levels 9-13</center></a>
-	<br>
+<br>
 	<a href="https://scratch.mit.edu/projects/194164289"><center>Geometry Dash Levels 14-15</center>
-	<br>
+<br>
 	<a href="https://scratch.mit.edu/projects/675486686/"><center>Geometry Dash Levels 16-21</center></a>
-	<br>
+<br>
 	<a href="https://scratch.mit.edu/projects/942961961/"><center>Geometry Dash Level 22 (Dash)</center></a>
-	<br>
-	<h1 id="title"><center>other levels</center></h1>
+<h1 id="title"><center>other levels</center></h1>
 	<a href="https://scratch.mit.edu/projects/201389627/"><center>Bloodbath</center></a>
-	<br>
+<br>
 	<a href="https://scratch.mit.edu/projects/536483250/"><center><p>Brimstone Rebirth</p></center>
-	<br>
+<br>
 	<center><a href="https://scratch.mit.edu/projects/906130668/">Tidal Wave</a></center>
 	<br>
 	<a href="https://scratch.mit.edu/projects/356595737/"><center>Cadenza</center></a>
