--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ img {
 	<h1 id="title"><center>I AM AWARE THAT A LOT OF PROJECTS ARE GONE. THIS IS BECAUSE ROBTOP HAS BEEN TAKING THEM DOWN. i'm currently trying to find backups to put here, but i may not be able to restore everything. sorry for the inconvenience.</center></h1>
   <center><p>suggest scratch geometry dash games <a href="https://github.com/Marc92020/geometry-dash-scratch-directory/issues">here</a></p></center>
 <img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo.png" alt="logo">
-	<center><p>due to robtop taking gd scratch games down, most versions linked here are now hosted on this site.</p></center>
+	<center><p>due to robtop taking gd scratch games down, some versions are hosted here. i'll try to keep most versions using untouched scratch remixes, but if they get taken down i'll rehost them here</p></center>
 <h1 id="title"><center>normal games</center></h1>
 	<a href="/geometry-dash-scratch-directory/GeometryDash.html"><center>Geometry Dash</center></a>
 <br>
@@ -58,7 +58,7 @@ img {
 <br>
   	<a href="https://scratch.mit.edu/projects/405324048"><center>Geometry Dash World Toxic Factory Hacked</center></a>
 <h1 id="title"><center>geometry dash levels 4-21</center></h1>
-	<a href="https://scratch.mit.edu/projects/118638917/"><center>Geometry Dash Levels 4-6</center></a>
+	<a href="https://scratch.mit.edu/projects/944596365/"><center>Geometry Dash Levels 4-6</center></a>
   <br>
 	<a href="https://scratch.mit.edu/projects/120721851"><center>Geometry Dash Levels 7-8</center></a>
 <br>
