--- a/index.html
+++ b/index.html
@@ -60,28 +60,29 @@ img {
 <h1 id="title"><center>geometry dash levels 4-21</center></h1>
 	<a href="https://scratch.mit.edu/projects/944596365/"><center>Geometry Dash Levels 4-6</center></a>
   <br>
-	<a href="https://scratch.mit.edu/projects/120721851"><center>Geometry Dash Levels 7-8</center></a>
+	<a href="https://scratch.mit.edu/projects/776804853/"><center>Geometry Dash Levels 7-8</center></a>
 <br>
-	<a href="https://scratch.mit.edu/projects/140185501/"><center>Geometry Dash Levels 9-13</center></a>
+	<a href="https://scratch.mit.edu/projects/476589731/"><center>Geometry Dash Levels 9-13</center></a>
 <br>
-	<a href="https://scratch.mit.edu/projects/194164289"><center>Geometry Dash Levels 14-15</center>
+	<a href="https://scratch.mit.edu/projects/776805418/"><center>Geometry Dash Levels 14-15</center>
 <br>
-	<a href="https://scratch.mit.edu/projects/675486686/"><center>Geometry Dash Levels 16-21</center></a>
+	<a href="https://scratch.mit.edu/projects/194895616"><center>Geometry Dash Levels 16-21</center></a>
 <br>
 	<a href="https://scratch.mit.edu/projects/942961961/"><center>Geometry Dash Level 22 (Dash)</center></a>
 <h1 id="title"><center>other levels</center></h1>
-	<a href="https://scratch.mit.edu/projects/201389627/"><center>Bloodbath</center></a>
+	<a href="https://scratch.mit.edu/projects/786319737/"><center>Bloodbath</center></a>
 <br>
-	<a href="https://scratch.mit.edu/projects/536483250/"><center><p>Brimstone Rebirth</p></center>
+	<a href="https://scratch.mit.edu/projects/536483250/"><center>Brimstone Rebirth</center></a>
 <br>
 	<center><a href="https://scratch.mit.edu/projects/906130668/">Tidal Wave</a></center>
-	<br>
-	<a href="https://scratch.mit.edu/projects/356595737/"><center>Cadenza</center></a>
-	<br>
-	<h1 id="title"><center>level editors</center></h1>
+<br>
+	<a href="https://scratch.mit.edu/projects/1153522769/"><center>Cadenza</center></a>
+<br>
+	<a href="https://scratch.mit.edu/studios/4002529/"><center>More online levels</center>
+<h1 id="title"><center>level editors</center></h1>
 	<a href="https://scratch.mit.edu/projects/617482003/"><center>Geometry Dash Level Editor by CaptainFlufBall (doesnt use griffpatch's gd engine)</center></a>
 	<br>
-	<a href="https://scratch.mit.edu/projects/305194541/"><center>Geometry Dash Level Editor by iPhone_ATT_TWC_tests</center></a>
+	<a href="https://scratch.mit.edu/projects/540886203"><center>Compacted GD Level Editor 3 by VinnieK2008</center></a>
 	<br>
 	<h1 id="title"><center>mods and other stuff</center></h1>
 	<a href="https://scratch.mit.edu/projects/860151753/"><center>Egg Dash (its much better than the other geometry dash remakes on scratch)</center></a>
@@ -89,14 +90,6 @@ img {
 	<a href="https://scratch.mit.edu/projects/478780753/"><center>Geometry Dash Just Keep Jumping (as soon as the level starts hold jump its that easy)</center></a>
     <br>
 	<a href="https://scratch.mit.edu/projects/106125442/"><center>steve dash (kinda fire ngl)</center></a>
-    <br>
-	<a href="https://scratch.mit.edu/projects/245970184/"><center>Geometry Dash 2.2 Cycles</center></a>
-	<br>
-	<h1 id="title"><center>the 25 levels of christmas (do not question)</center></h1>
-	<a href="https://scratch.mit.edu/projects/461805401/"><center>day 10</center></a>
-	<br>
-	<a href="https://scratch.mit.edu/projects/467092299/"><center>day 22</center></a>
-	<br>
 	<h1 id="title"><center>real geometry dash free</center></h1>
 	<a href="pirate.html"><center>guide because i don't link it here anymore</center></a>
 	<br>
