--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ img {
 <br>
 	<a href="https://scratch.mit.edu/projects/1153522769/"><center>Cadenza</center></a>
 <br>
-	<a href="https://scratch.mit.edu/studios/4002529/"><center>More online levels</center>
+	<a href="https://scratch.mit.edu/studios/4002529/"><center>More online levels</center></a>
 <h1 id="title"><center>level editors</center></h1>
 	<a href="https://scratch.mit.edu/projects/617482003/"><center>Geometry Dash Level Editor by CaptainFlufBall (doesnt use griffpatch's gd engine)</center></a>
 	<br>
