--- a/overhaul/index.html
+++ b/overhaul/index.html
@@ -1,2 +1,5 @@
-<head><title>under construction</title></head>
+<head>
+  <title>under construction</title>
+<link rel="stylesheet" href="other-shit/style.css" type="text/css" charset="utf-8" />
+</head>
 <body><h1>under construction...</h1></body>
