--- a/overhaul/index.html
+++ b/overhaul/index.html
@@ -1,5 +1,6 @@
 <head>
   <title>under construction</title>
 <link rel="stylesheet" href="other-shit/style.css" type="text/css" charset="utf-8" />
+  <!-- replace other-shit with stuff when i port ts over to the main site -->
 </head>
 <body><h1>under construction...</h1></body>
