--- a/overhaul/index.html
+++ b/overhaul/index.html
@@ -3,4 +3,4 @@
 <link rel="stylesheet" href="other-shit/style.css" type="text/css" charset="utf-8" />
   <!-- replace other-shit with stuff when i port ts over to the main site -->
 </head>
-<body><h1>under construction...</h1></body>
+<body><h1 id="title">under construction...</h1></body>
