--- a/overhaul/index.html
+++ b/overhaul/index.html
@@ -4,6 +4,10 @@
   <!-- replace other-shit with stuff when i port ts over to the main site -->
 </head>
 <body>
+  <div class="center">
+    <p>Game suggestions are currently closed until I find a site to host a form for them (not like they were ever used anyway)</p>
+    <img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo.png" alt="logo">
+  </div>
   <h1 id="title">under construction...</h1>
   <p>test</p>
 </body>
