--- a/overhaul/index.html
+++ b/overhaul/index.html
@@ -6,7 +6,7 @@
 <body>
   <div class="center">
     <p>Game suggestions are currently closed until I find a site to host a form for them (not like they were ever used anyway)</p>
-    <img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo.png" alt="logo">
+    <img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo.png" alt="logo" style="width: 50%">
   </div>
   <h1 id="title">under construction...</h1>
   <p>test</p>
