--- a/overhaul/index.html
+++ b/overhaul/index.html
@@ -10,4 +10,6 @@
   </div>
   <h1 id="title">under construction...</h1>
   <p>test</p>
+  <h1 id="title" style="transform: scale(1.5)">test 1</h1>
+  <h1 id="title" style="transform: scale(0.5)">test 2</h1>
 </body>
