--- a/overhaul/index.html
+++ b/overhaul/index.html
@@ -8,8 +8,8 @@
     <p>Game suggestions are currently closed until I find a site to host a form for them (not like they were ever used anyway)</p>
     <img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo.png" alt="logo" style="width: 75%">
   </div>
-  <h1 id="title">under construction...</h1>
+  <h1>under construction...</h1>
   <p>test</p>
-  <h1 id="title" class="bigger">test 1</h1>
-  <h1 id="title" class="bigger">test 2</h1>
+  <h1 class="bigger">test 1</h1>
+  <h1 class="bigger">test 2</h1>
 </body>
